# fast-api-blog

./: .gitignore  auth.py  blog.db  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  pyproject.toml  schema.py
alembic/: env.py
alembic/versions/: 578bf132e10f_feat_change_image_url_size_to_255.py  80b4bf437f32_initial_schema.py  b2b0daad836b_feat_add_likes_to_posts.py
routers/: posts.py  users.py
templates/: account.html  home.html  layout.html
tests/: conftest.py  sync_test_demo.py  test_posts.py
